# stock-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  run.py  test.html  test_render.py
.github/workflows/: ci-cd.yml  daily-stock-run.yml
app/: config.py  dependencies.py  main.py
app/analysis/: gemini_client.py  prompt_loader.py
app/api/: routes.py
app/data/: fundamentals.py  models.py  nse_client.py
app/filters/: rules.py
app/notification/: emailer.py  whatsapp.py
app/scheduler/: jobs.py
app/services/: stock_service.py
app/utils/: logging.py
prompts/: analysis_prompt.txt  batch_analysis_prompt.txt  market_news_prompt.txt  notification_prompt.txt  summary_prompt.txt  system_prompt.txt
